# pyproj

./: api.http  docker-compose.override.yaml  docker-compose.yaml  pyproject.toml
.devcontainer/: devcontainer.json  docker-compose.yml
src/core/__seedwork/domain/: entities.py  exceptions.py  value_objects.py
src/core/__seedwork/tests/unit/domain/: test_unit_entities.py  test_unit_value_object.py
src/core/category/domain/: entities.py
src/core/category/tests/unit/domain/: test_unit_entities.py
