[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Fabio Faria", email = "fabiofadev87@gmail.com"},
]
dependencies = [
    "autopep8>=2.0.4",
]
requires-python = ">=3.10.2"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-pep517>=0.12.0"]
build-backend = "pdm.pep517.api"

[tool.pdm.dev-dependencies]
dev = [
    "pytest>=7.4.3",
]
